# symphony

./: .gitignore  CLAUDE.md
python/: .gitignore  README.md  WORKFLOW.md  pyproject.toml  test_structlog_issue.py
python/src/symphony/: __init__.py  __main__.py  cli.py
python/src/symphony/agent/: claude_code.py  runner.py
python/src/symphony/config/: config.py  schema.py
python/src/symphony/models/: issue.py  state.py
python/src/symphony/observability/: log_file.py  pubsub.py  status_dashboard.py
python/src/symphony/orchestrator/: dispatch.py  orchestrator.py  reconciliation.py  retry.py
python/src/symphony/ssh/: client.py
python/src/symphony/tracker/: base.py  memory.py
python/src/symphony/tracker/linear/: adapter.py  client.py
python/src/symphony/web/: api.py  dashboard.py  presenter.py  server.py
python/src/symphony/workflow/: loader.py  prompt_builder.py  store.py
python/src/symphony/workspace/: manager.py  path_safety.py
python/tests/: conftest.py
python/tests/test_config/: test_schema.py
python/tests/test_orchestrator/: test_commenting.py  test_dispatch.py  test_retry.py
python/tests/test_workflow/: test_loader.py
python/tests/test_workspace/: test_path_safety.py
