[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "symphony"
version = "0.1.0"
description = "Autonomous work orchestration service using Claude Code"
requires-python = ">=3.11"
license = "Apache-2.0"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.5",
    "pyyaml>=6.0",
    "jinja2>=3.1",
    "fastapi>=0.110",
    "uvicorn>=0.27",
    "websockets>=12.0",
    "structlog>=24.0",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-httpx>=0.30",
    "mypy>=1.8",
    "ruff>=0.2",
]

[project.scripts]
symphony = "symphony.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/symphony"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
